docs: improve useI18n examples

--- a/packages/document/docs/en/api/client-api/api-runtime.mdx
+++ b/packages/document/docs/en/api/client-api/api-runtime.mdx
@@ -61,6 +61,8 @@ import UseI18n from '../../fragments/useI18n';
 
 <UseI18n />
 
+> See more in [Internationalization](/guide/default-theme/i18n).
+
 ## Router Hook
 
 The framework internally uses and re-exports all APIs of `react-router-dom`, you can use it like this:
