--- a/packages/document/docs/en/guide/default-theme/i18n.mdx
+++ b/packages/document/docs/en/guide/default-theme/i18n.mdx
@@ -38,17 +38,17 @@ For example:
 
 ```json title="i18n.json"
 {
-  "getting-started": {
-    "zh": "开始",
-    "en": "Getting Started"
+  "gettingStarted": {
+    "en": "Getting Started",
+    "zh": "开始"
   },
   "features": {
-    "zh": "基础功能",
-    "en": "Features"
+    "en": "Features",
+    "zh": "特性"
   },
   "guide": {
-    "zh": "指南",
-    "en": "Guide"
+    "en": "Guide",
+    "zh": "指南"
   }
 }
 ```
@@ -168,12 +168,12 @@ In the \_meta.json configuration at the sidebar level, you can specify `label` a
   {
     "type": "dir",
     "name": "start",
-    "label": "getting-started"
+    "label": "gettingStarted"
   }
 ]
 ```
 
-Here, `label` is `getting-started`, this value will be automatically translated into `开始` or `Getting Started`, depending on the current language.
+Here, `label` is `gettingStarted`, this value will be automatically translated into `开始` or `Getting Started`, depending on the current language.
 
 ## Use `useI18n` in custom components
 
