--- a/packages/document/docs/zh/api/client-api/api-runtime.mdx
+++ b/packages/document/docs/zh/api/client-api/api-runtime.mdx
@@ -61,6 +61,8 @@ import UseI18n from '../../fragments/useI18n';
 
 <UseI18n />
 
+> 查看 [国际化](/guide/default-theme/i18n) 了解更多。
+
 ## 路由 Hook
 
 框架内部使用并重导出了 `react-router-dom` 的所有 API，你可以这样来使用:
