--- a/packages/document/docs/zh/guide/default-theme/i18n.mdx
+++ b/packages/document/docs/zh/guide/default-theme/i18n.mdx
@@ -38,17 +38,17 @@ export interface I18n {
 
 ```json title="i18n.json"
 {
-  "getting-started": {
-    "zh": "开始",
-    "en": "Getting Started"
+  "gettingStarted": {
+    "en": "Getting Started",
+    "zh": "开始"
   },
   "features": {
-    "zh": "基础功能",
-    "en": "Features"
+    "en": "Features",
+    "zh": "特性"
   },
   "guide": {
-    "zh": "指南",
-    "en": "Guide"
+    "en": "Guide",
+    "zh": "指南"
   }
 }
 ```
@@ -169,12 +169,12 @@ docs
   {
     "type": "dir",
     "name": "start",
-    "label": "getting-started"
+    "label": "gettingStarted"
   }
 ]
 ```
 
-其中，`label` 为 `getting-started`，这个值会被自动翻译为 `开始` 或者 `Getting Started`，具体取决于当前语言。
+其中，`label` 为 `gettingStarted`，这个值会被自动翻译为 `开始` 或者 `Getting Started`，具体取决于当前语言。
 
 ## 自定义组件中使用 `useI18n`
 
