--- a/packages/document/docs/en/fragments/useI18n.mdx
+++ b/packages/document/docs/en/fragments/useI18n.mdx
@@ -6,7 +6,7 @@ import { useI18n } from 'rspress/runtime';
 const MyComponent = () => {
   const t = useI18n();
 
-  return <div>{t('getting-started')}</div>;
+  return <div>{t('gettingStarted')}</div>;
 };
 ```
 
@@ -30,7 +30,7 @@ import { useI18n } from 'rspress/runtime';
 const MyComponent = () => {
   const t = useI18n<typeof import('i18n')>();
 
-  return <div>{t('getting-started')}</div>;
+  return <div>{t('gettingStarted')}</div>;
 };
 ```
 
