--- a/packages/document/docs/en/plugin/system/introduction.mdx
+++ b/packages/document/docs/en/plugin/system/introduction.mdx
@@ -10,7 +10,7 @@ The overall framework is divided into two parts: **Node Side** and **Browser Run
 
 - [**Markdown/MDX compilation**](/plugin/system/plugin-api#markdown)。You can add [`remark`](https://github.com/remarkjs/remark)/[`rehype`](https://github.com/rehypejs/rehype) plugins to extend the compliation ability of Markdown/MDX.
 - [**Add custom page**](/plugin/system/plugin-api#addpages). On the basis of the framework's conventional routing, you can also add new routes through plugins, such as adding a `/blog` route to display a list of blogs, and the content is defined by yourself.
-- [**Custom build tool behavior**](/plugin/system/plugin-api#builderconfig).In the framework plugin, you can customize the config of the underlying build tool [Rspack](https://rspack.dev), such as `define`, `alias`, and you can also add custom Rspack plugins.
+- [**Custom build tool behavior**](/plugin/system/plugin-api#builderconfig).In the framework plugin, you can customize the config of the underlying build tool [Rsbuild](https://rsbuild.dev), and you can also add some Rspack or Rsbuild plugins.
 - [**Extend page metadata**](/plugin/system/plugin-api#extendpagedata). For each page, some metadata will be calculated inside the framework, such as `title`, `description`, etc. You can extend the calculation logic of these metadata through plugins, and pass [usePageData](/api/client-api/api-runtime.html#usepagedata) hook access.
 - Insert some [**custom logic**](/plugin/system/plugin-api#beforebuild/afterbuild) before and after the build process. Such as closing some event listeners after the build process ends.
 - [**Add global components**](/plugin/system/plugin-api#globaluicomponents). Rspress internally uses React for rendering. You can flexibly extend the runtime page by defining global React components, such as `adding a global BackToTop (return to top) component`, `adding a global side effect logic`.
