--- a/packages/document/docs/zh/guide/start/introduction.mdx
+++ b/packages/document/docs/zh/guide/start/introduction.mdx
@@ -1,8 +1,6 @@
 # 介绍
 
-## 定位
-
-Rspress 是一个基于 [Rspack](https://rspack.dev/) 的静态站点生成器，基于 React 框架进行渲染，内置了一套默认的文档主题，你可以通过 Rspress 来快速搭建一个文档站点，同时也可以自定义主题，来满足你的个性化静态站需求，比如博客站、产品主页等。当然，你也可以接入官方提供的相应插件来方便地搭建组件库文档。
+Rspress 是一个基于 [Rsbuild](https://rsbuild.dev/) 的静态站点生成器，基于 React 框架进行渲染，内置了一套默认的文档主题，你可以通过 Rspress 来快速搭建一个文档站点，同时也可以自定义主题，来满足你的个性化静态站需求，比如博客站、产品主页等。当然，你也可以接入官方提供的相应插件来方便地搭建组件库文档。
 
 ## 项目背景
 
