fix: correct GitHub spelling

--- a/packages/document/docs/en/guide/basic/deploy.mdx
+++ b/packages/document/docs/en/guide/basic/deploy.mdx
@@ -151,7 +151,7 @@ When you push the code to the `main` branch, `GitHub Actions` will automatically
 
 #### Basic Configuration
 
-Deploying a project on `Netlify` is very simple. You only need to import your Github repository, and then configure some basic information to deploy. Just configure the following two fields:
+Deploying a project on `Netlify` is very simple. You only need to import your GitHub repository, and then configure some basic information to deploy. Just configure the following two fields:
 
 - `Build command`: Build command, here we fill in the build command in the project, such as `npm run build`.
 - `Publish directory`: Output directory, here we fill in the output directory `doc_build` in the project.
