--- a/packages/document/docs/en/guide/basic/ssg.mdx
+++ b/packages/document/docs/en/guide/basic/ssg.mdx
@@ -16,7 +16,7 @@ doc_build
 │   └── ...
 ```
 
-You can deploy the contents of this product directory to any static site hosting service, such as Github Pages, Netlify, Vercel, etc.
+You can deploy the contents of this product directory to any static site hosting service, such as GitHub Pages, Netlify, Vercel, etc.
 
 ## Advantages of SSG
 
