--- a/packages/document/docs/zh/guide/basic/deploy.mdx
+++ b/packages/document/docs/zh/guide/basic/deploy.mdx
@@ -151,7 +151,7 @@ jobs:
 
 #### 完成基础配置
 
-在 `Netlify` 上部署项目非常简单，你只需要引入你的 Github 仓库，然后配置一些基础信息就可以部署了，主要配置下面两个字段即可：
+在 `Netlify` 上部署项目非常简单，你只需要引入你的 GitHub 仓库，然后配置一些基础信息就可以部署了，主要配置下面两个字段即可：
 
 - `Build command`：构建命令，这里我们填写项目中的 build 命令即可，如 `npm run build`。
 - `Publish directory`：产物目录，这里我们填写项目中的产物目录 `doc_build`。
