--- a/packages/document/docs/zh/guide/basic/ssg.mdx
+++ b/packages/document/docs/zh/guide/basic/ssg.mdx
@@ -16,7 +16,7 @@ doc_build
 │   └── ...
 ```
 
-你可以将这个产物目录的内容部署到任何静态站点托管服务上，比如 Github Pages、Netlify、Vercel 等。
+你可以将这个产物目录的内容部署到任何静态站点托管服务上，比如 GitHub Pages、Netlify、Vercel 等。
 
 ## SSG 的优势
 
