--- a/packages/document/docs/en/guide/default-theme/navbar.mdx
+++ b/packages/document/docs/en/guide/default-theme/navbar.mdx
@@ -88,7 +88,7 @@ export default defineConfig({
         text: 'Links',
         items: [
           {
-            text: 'Github',
+            text: 'GitHub',
             link: 'http://github.com/',
           },
           {
