Apply suggestions from code review

--- a/packages/document/docs/en/guide/basic/custom-page.mdx
+++ b/packages/document/docs/en/guide/basic/custom-page.mdx
@@ -172,7 +172,7 @@ import PageType from '@en/fragments/page-type';
 
 ### Customizing header tag
 
-In `rspress.config.ts`, you can edit HTML's metadata (aka header tag) on a page basis. We explain it with more details in [basic config](https://rspress.dev/api/config/config-frontmatter#head) within the api section.
+In `rspress.config.ts`, you can edit HTML's metadata (aka header tag) on a page basis. We explain it with more details in [basic config](/api/config/config-frontmatter#head) within the api section.
 
 ### Generate metadata for better SEO
 
@@ -187,7 +187,7 @@ description: A modern explaination of 'edge'
 ---
 ```
 
-Read more details on how to customize **open graph images (og:image)** and **open graph title (og:title)** can be seen here in [frontmatter config](https://rspress.dev/api/config/config-frontmatter#head).
+Read more details on how to customize **open graph images (og:image)** and **open graph title (og:title)** can be seen here in [frontmatter config](/api/config/config-frontmatter#head).
 
 ### Using Fine-grained Switches
 
