--- a/packages/document/docs/en/guide/start/getting-started.mdx
+++ b/packages/document/docs/en/guide/start/getting-started.mdx
@@ -70,7 +70,7 @@ And then create `tsconfig.json`, add the following config:
     "useDefineForClassFields": true,
     "allowImportingTsExtensions": true
   },
-  "include": ["docs", "src"],
+  "include": ["docs", "theme", "rspress.config.ts"],
   "mdx": {
     "checkMdx": true
   }
