--- a/packages/document/docs/zh/guide/start/getting-started.mdx
+++ b/packages/document/docs/zh/guide/start/getting-started.mdx
@@ -71,7 +71,7 @@ export default defineConfig({
     "useDefineForClassFields": true,
     "allowImportingTsExtensions": true
   },
-  "include": ["docs", "src"],
+  "include": ["docs", "theme", "rspress.config.ts"],
   "mdx": {
     "checkMdx": true
   }
