feat(theme): replace twitter logo with x

--- a/packages/document/docs/en/api/config/config-theme.mdx
+++ b/packages/document/docs/en/api/config/config-theme.mdx
@@ -348,7 +348,7 @@ export default defineConfig({
 - Type: `Array`
 - Default: `[]`
 
-You can add related links through the following config, such as `github` links, `twitter` links, etc.
+You can add related links through the following config, such as `github` links, `x` links, etc.
 Related links support four modes: `link mode` `text mode` `image mode` `dom mode`, for example:
 
 ```ts title="rspress.config.ts"
@@ -399,6 +399,7 @@ export type SocialLinkIcon =
   | 'instagram'
   | 'linkedin'
   | 'slack'
+  | 'x'
   | 'twitter'
   | 'youtube'
   | 'wechat'
