--- a/packages/document/docs/en/guide/default-theme/navbar.mdx
+++ b/packages/document/docs/en/guide/default-theme/navbar.mdx
@@ -92,8 +92,8 @@ export default defineConfig({
             link: 'http://github.com/',
           },
           {
-            text: 'Twitter',
-            link: 'http://twitter.com/',
+            text: 'X',
+            link: 'http://x.com/',
           },
         ],
         position: 'left',
