--- a/packages/document/docs/zh/guide/default-theme/navbar.mdx
+++ b/packages/document/docs/zh/guide/default-theme/navbar.mdx
@@ -92,8 +92,8 @@ export default defineConfig({
             link: 'http://github.com/',
           },
           {
-            text: 'Twitter',
-            link: 'http://twitter.com/',
+            text: 'X',
+            link: 'http://x.com/',
           },
           // 也可以是一个导航栏组
           {
