fix: apply replaceRules in object frontmatter

--- a/e2e/fixtures/replace-rules/doc/index.mdx
+++ b/e2e/fixtures/replace-rules/doc/index.mdx
@@ -1,3 +1,10 @@
-import Content from './content.mdx';
+---
+pageType: home
 
-<Content />
+hero:
+  name: foo-hero
+  text: |
+    Lightning Fast
+    Static Site Generator
+  tagline: Simple, efficient and easy to extend
+---
