docs: link and example on using components

--- a/packages/document/docs/en/guide/advanced/custom-theme.mdx
+++ b/packages/document/docs/en/guide/advanced/custom-theme.mdx
@@ -38,9 +38,9 @@ On the one hand, you need to export a theme configuration object through `export
 
 ### 2. Use slot
 
-It is worth noting that the Layout component has designed a series of props to support slot elements. You can use these props to extend the layout of the default theme. For example, change the above Layout component to the following form:
+It is worth noting that the `Layout` component has designed a series of props to support slot elements. You can use these props to extend the layout of the default theme. For example, change the above `Layout` component to the following form:
 
-```tsx
+```tsx title="theme/index.tsx"
 import Theme from 'rspress/theme';
 
 // Show all props below
