feat: re-design container colors (#1348)

--- a/packages/document/docs/zh/guide/basic/use-mdx.mdx
+++ b/packages/document/docs/zh/guide/basic/use-mdx.mdx
@@ -87,6 +87,10 @@ title: Hello World
 **输入：**
 
 ```markdown
+:::note
+这是一个 `note` 类型的 `block`
+:::
+
 :::tip
 这是一个 `tip` 类型的 `block`
 :::
@@ -117,6 +121,10 @@ title: Hello World
 ```
 
 **输出：**
+
+:::note
+这是一个 `note` 类型的 `block`
+:::
 
 :::tip
 这是一个 `tip` 类型的 `block`
