docs(guide): route README.md => index

--- a/packages/document/docs/en/guide/basic/conventional-route.mdx
+++ b/packages/document/docs/en/guide/basic/conventional-route.mdx
@@ -23,6 +23,7 @@ The specific mapping rules are as follows:
 
 | file path       | route path |
 | --------------- | ---------- |
+| `README.md`     | `/`        |
 | `index.md`      | `/`        |
 | `/foo.md`       | `/foo`     |
 | `/foo/bar.md`   | `/foo/bar` |
