--- a/packages/document/docs/zh/guide/basic/conventional-route.mdx
+++ b/packages/document/docs/zh/guide/basic/conventional-route.mdx
@@ -23,6 +23,7 @@ docs
 
 | 文件路径        | 路由路径   |
 | --------------- | ---------- |
+| `README.md`     | `/`        |
 | `index.md`      | `/`        |
 | `/foo.md`       | `/foo`     |
 | `/foo/bar.md`   | `/foo/bar` |
