fix: highlight alias to itself

--- a/packages/core/tests/prismLanguages/index.mdx
+++ b/packages/core/tests/prismLanguages/index.mdx
@@ -23,8 +23,18 @@ int main(int argc, const char * argv[]) {
 }
 ```
 
+```go
+package main
+
+import "fmt"
+
+func main() {
+    fmt.Println("Hello, World!")
+}
+```
+
 # 内置组件
 
-import InternalComponents from './extend'
+import InternalComponents from './extend';
 
 <InternalComponents />
