--- a/packages/document/docs/en/guide/start/introduction.mdx
+++ b/packages/document/docs/en/guide/start/introduction.mdx
@@ -265,6 +265,7 @@ export default defineConfig({
   themeConfig: {
     // Enable View Transition transition
     enableContentAnimation: true,
+    enableAppearanceAnimation: true,
   },
 });
 ```
