--- a/packages/document/docs/zh/guide/start/introduction.mdx
+++ b/packages/document/docs/zh/guide/start/introduction.mdx
@@ -266,6 +266,7 @@ export default defineConfig({
   themeConfig: {
     // 开启 View Transition 过渡
     enableContentAnimation: true,
+    enableAppearanceAnimation: true,
   },
 });
 ```
