--- a/packages/document/docs/zh/api/config/config-theme.mdx
+++ b/packages/document/docs/zh/api/config/config-theme.mdx
@@ -562,7 +562,7 @@ export default defineConfig({
 - Type: `boolean`
 - Default: `false`
 
-在浅色和深色主题之间切换时是否有动画效果。使用 [View Transition API](https://developer.mozilla.org/docs/Web/API/View_Transitions_API) 来实现。例如：
+在浅色和深色主题之间切换时是否有动画效果，使用 [View Transition API](https://developer.mozilla.org/docs/Web/API/View_Transitions_API) 实现。例如：
 
 > 切换动画暂时不能配置。
 
