feat(theme-default): adjust the color in dark mode

--- a/packages/document/docs/en/guide/start/introduction.mdx
+++ b/packages/document/docs/en/guide/start/introduction.mdx
@@ -38,7 +38,7 @@ At the same time, Rspress internally also applies many other build optimization 
 
 In order to ensure the flexibility of content development, Rspress chooses to support the MDX content format.
 
-Because MDX actually represents a componentized content organization method behind it. On the one hand, documents are components, so we can reuse document fragments between different documents. On the other hand, any custom React components can be introduced in the document, greatly releasing the imagination of document development.
+MDX represents a method of componentized content organization. In other words, documents serve as components, allowing for the reuse of document fragments across different documents. Additionally, custom React components can be incorporated into documents, significantly enhancing the flexibility of document development.
 
 ### Basic Capabilities of Documentation Site
 
