--- a/packages/document/docs/en/guide/default-theme/components.mdx
+++ b/packages/document/docs/en/guide/default-theme/components.mdx
@@ -1,5 +1,5 @@
-# Internal Components
+# Built-in Components
 
-import InternalComponents from '../../fragments/internal-components'
+import BuiltinComponents from '../../fragments/builtin-components';
 
-<InternalComponents />
+<BuiltinComponents />
