--- a/packages/document/docs/zh/api/client-api/api-components.mdx
+++ b/packages/document/docs/zh/api/client-api/api-components.mdx
@@ -1,5 +1,5 @@
 # 内置组件
 
-import InternalComponents from '../../fragments/internal-components';
+import BuiltinComponents from '../../fragments/builtin-components';
 
-<InternalComponents />
+<BuiltinComponents />
