docs: enable sitemap plugin

--- a/packages/document/docs/en/plugin/community-plugins/overview.mdx
+++ b/packages/document/docs/en/plugin/community-plugins/overview.mdx
@@ -4,6 +4,7 @@
 
 Community plugins include:
 
+- [rspress-plugin-sitemap](https://github.com/jl917/rspress-plugin-sitemap): Automatically generate SEO-related sitemaps.
 - [rspress-plugin-translate](https://github.com/byteHulk/rspress-plugin-translate): A plugin that integrates LLM for document translation.
 - [rspress-plugin-font-open-sans](https://github.com/rspack-contrib/rspress-plugin-font-open-sans): Use Open Sans as the default font in your Rspress website.
   Rspress website.
