feat: support preview [root] and fix root priority

--- a/packages/document/docs/en/api/commands.mdx
+++ b/packages/document/docs/en/api/commands.mdx
@@ -35,9 +35,10 @@ Options:
 The `rspress preview` command is used to preview the output files of the `rspress build` command locally.
 
 ```txt
-Usage: rspress preview [options]
+Usage: rspress preview [root] [options]
 
 Options:
+   root specify the root directory of the project, which is `docs` in current directory by default, Optional
    -c --config <config> specify config file path, which can be a relative path or an absolute path
    --port <port> specify port number
    --host <host> specify host
