refactor: change apiFilterText to overviewFooText

--- a/packages/document/docs/en/api/config/config-theme.mdx
+++ b/packages/document/docs/en/api/config/config-theme.mdx
@@ -343,19 +343,19 @@ export default defineConfig({
 });
 ```
 
-## apiFilterText
+## overviewFooText
 
 - Type: `string`
 - Default: `Filter`
 
-The title of the API filter. For example:
+The text of the overview filter. For example:
 
 ```ts title="rspress.config.ts"
 import { defineConfig } from 'rspress/config';
 
 export default defineConfig({
   themeConfig: {
-    apiFilterText: 'Filter',
+    overviewFooText: 'Filter',
   },
 });
 ```
