--- a/packages/document/docs/zh/api/config/config-theme.mdx
+++ b/packages/document/docs/zh/api/config/config-theme.mdx
@@ -329,19 +329,19 @@ export default defineConfig({
 });
 ```
 
-## apiFilterText
+## overviewFooText
 
 - Type: `string`
 - Default: `Filter`
 
-API 过滤的文本。比如:
+概览视图的过滤文本。比如:
 
 ```ts title="rspress.config.ts"
 import { defineConfig } from 'rspress/config';
 
 export default defineConfig({
   themeConfig: {
-    apiFilterText: 'Filter',
+    overviewFooText: 'Filter',
   },
 });
 ```
