feat: overview title compatible with custom h1

--- a/packages/document/docs/en/api/config/config-theme.mdx
+++ b/packages/document/docs/en/api/config/config-theme.mdx
@@ -343,6 +343,23 @@ export default defineConfig({
 });
 ```
 
+## overviewTitleText
+
+- Type: `string`
+- Default: `Overview`
+
+The title of the overview. For example:
+
+```ts title="rspress.config.ts"
+import { defineConfig } from 'rspress/config';
+
+export default defineConfig({
+  themeConfig: {
+    overviewTitleText: 'Overview',
+  },
+});
+```
+
 ## overviewFooText
 
 - Type: `string`
